--- a/an1/Semestrul1/ASC/ASM_tools/asm_tools/ollydbg/ollydbg.ini
+++ b/an1/Semestrul1/ASC/ASM_tools/asm_tools/ollydbg/ollydbg.ini
@@ -226,29 +226,29 @@ Activate speech=0
 Translate commands and registers=1
 Skip leading zeros in hex numbers=1
 [History]
-Executable[0]=C:\Users\tudor\OneDrive\Desktop\Assembly\Exercitii\Lab4.exe
+Executable[0]=C:\Users\tudor\OneDrive\Desktop\UBB INFO\an1\Semestrul1\ASC\Exercitii\lab 4\2.exe
 Arguments[0]=
 Current dir[0]=
-Executable[1]=C:\Users\tudor\OneDrive\Desktop\Assembly\Exercitii\Probleme in plus\lab 8\29.exe
+Executable[1]=C:\Users\tudor\OneDrive\Desktop\Assembly\Exercitii\Lab4.exe
 Arguments[1]=
 Current dir[1]=
-Executable[2]=C:\Users\tudor\OneDrive\Desktop\Assembly\Exercitii\Probleme in plus\lab 5\1.exe
+Executable[2]=C:\Users\tudor\OneDrive\Desktop\Assembly\Exercitii\Probleme in plus\lab 8\29.exe
 Arguments[2]=
 Current dir[2]=
-Executable[3]=C:\Users\tudor\OneDrive\Desktop\Assembly\Exercitii\Probleme in plus\lab 4\5.exe
+Executable[3]=C:\Users\tudor\OneDrive\Desktop\Assembly\Exercitii\Probleme in plus\lab 5\1.exe
 Arguments[3]=
 Current dir[3]=
-Executable[4]=C:\Users\tudor\OneDrive\Desktop\Assembly\Exercitii\Probleme in plus\cifrele unui numar\1.exe
+Executable[4]=C:\Users\tudor\OneDrive\Desktop\Assembly\Exercitii\Probleme in plus\lab 4\5.exe
 Arguments[4]=
 Current dir[4]=
-Executable[5]=C:\Users\tudor\OneDrive\Desktop\Murariu Tudor grupa 215\MuariuTudorGrupa215.exe
+Executable[5]=C:\Users\tudor\OneDrive\Desktop\Assembly\Exercitii\Probleme in plus\cifrele unui numar\1.exe
 Arguments[5]=
 Current dir[5]=
 Log file=log.txt
 Trace save file=trace.txt
-Data directory=C:\Users\tudor\OneDrive\Desktop\Assembly\ASM_tools\asm_tools\ollydbg
-Standard library directory=C:\Users\tudor\OneDrive\Desktop\Assembly\ASM_tools\asm_tools\ollydbg
-Plugin directory=C:\Users\tudor\OneDrive\Desktop\Assembly\ASM_tools\asm_tools\ollydbg
+Data directory=C:\Users\tudor\OneDrive\Desktop\UBB INFO\an1\Semestrul1\ASC\ASM_tools\asm_tools\ollydbg
+Standard library directory=C:\Users\tudor\OneDrive\Desktop\UBB INFO\an1\Semestrul1\ASC\ASM_tools\asm_tools\ollydbg
+Plugin directory=C:\Users\tudor\OneDrive\Desktop\UBB INFO\an1\Semestrul1\ASC\ASM_tools\asm_tools\ollydbg
 API help file=
 Alternative initialization file=
 Last viewed file=
@@ -260,7 +260,7 @@ Debug data directory[1]=
 Debug data directory[2]=
 Previous JIT=
 [OllyDbg]
-Placement=715,142,793,604,1
+Placement=552,108,793,604,0
 [CPU]
 Placement=0,0,1536,738,1
 Offset[0]=0
@@ -274,7 +274,7 @@ Columns=54,102,240,1536
 Appearance=1,0,0,0,0
 [CPU registers]
 Appearance=1,0,1,0,0
-Local=17,66306
+Local=17,66304
 [CPU Dump]
 Appearance=1,0,1,0,0
 Columns=54,288,102
@@ -284,10 +284,10 @@ Appearance=1,0,0,0,0
 Columns=54,60,30,1536
 Local=000A0104
 [Dialog placement]
-Edit register=963,140
+Edit register=963,122
 Assemble=407,125
 Enter string=869,105
-Edit data=345,337
+Edit data=353,282
 [Command help]
 Placement=26,26,333,174,1
 Appearance=1,0,0,0,0
